--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="ReadBook">ReadBook</string>
     <string name="author">Author</string>
 
-<!--    asdasdasdksmadlmsalkdmaslkmdlaksmdlkm -->
+    <!--    asdasdasdksmadlmsalkdmaslkmdlaksmdlkm -->
     <string name="book_viewed_on">Viewed %s</string>
     <string name="book_added_on">Added %s</string>
 
@@ -53,8 +53,8 @@
     <string name="sort_by_added_date">Sort by added</string>
     <string name="sort_by_title">Sort by title</string>
     <string name="sort_by_author">Sort by author</string>
-    <string translatable="false" name="prev_text">&lt;&lt;</string>
-    <string translatable="false" name="next_text">&gt;&gt;</string>
+    <string name="prev_text" translatable="false">&lt;&lt;</string>
+    <string name="next_text" translatable="false">&gt;&gt;</string>
     <string name="books_added">%d books added</string>
     <string name="bright">Bright</string>
     <string name="dim">Dim</string>
@@ -69,7 +69,7 @@
     <string name="web_add">Add</string>
     <string name="getbooks_desc">The links below will open in your web browser. Downloaded books will be placed in the web browser\'s default download location.</string>
     <string name="new_websrc">New</string>
-    <string translatable="false" name="web_url_hint">http://www.</string>
+    <string name="web_url_hint" translatable="false">http://www.</string>
     <string name="search_res_title">Search for \'%1$s\' (%2$d)</string>
     <string name="search_for">Search for:</string>
     <string name="hint_search_text">Little Women</string>
@@ -89,6 +89,7 @@
     <string name="bookstatus">BookStatus</string>
     <string name="ctlgname">CtlgName</string>
     <string name="ctlgurl">CtlgURL</string>
+    <string name="title_activity_splash_screen">Splash</string>
 
 
     <!-- if your language/country has its own sites change or add them here -->
